// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuotaWidget.vue should render correct contents 1`] = `
<div class="quota-widget" quotatype="quota">
  <div class="quota-main">
    <div class="quota-cell cell--title">
      <h4 class="text is-caption is-semibold is-txtGrey">Widget test</h4>
    </div>
    <div class="quota-cell cell--large">
      <div class="progressbar">
        <div class="progressbar progressbar--good" style="width: 3.2414910858995136%;"></div>
      </div>
    </div>
  </div>
  <div class="quota-data">
    <div class="quota-cell cell--medium"><span class="text is-small is-txtSoftGrey">1194 Gb</span></div>
    <div class="quota-cell cell--medium cell--mobile"><span class="text is-small is-txtSoftGrey">40 Gb</span></div>
    <div class="quota-cell cell--medium"><span class="text is-small is-txtSoftGrey">1234 Gb</span></div>
    <div class="quota-help cell--small"><a href=""><img svg-inline="" src="../../../assets/icons/common/question-mark.svg" class="quota-image"></a></div>
  </div>
</div>
`;

exports[`QuotaWidget.vue should render correctly compact widget 1`] = `
<div class="quota-widget" quotatype="credits" mode="compact">
  <div class="quota-main">
    <div class="quota-cell cell--title">
      <h4 class="text is-caption is-semibold is-txtGrey">Another test</h4>
    </div>
    <div class="quota-cell cell--large">
      <div class="progressbar">
        <div class="progressbar progressbar--good" style="width: 0.9724473257698543%;"></div>
      </div>
    </div>
  </div>
  <div class="quota-data">
    <div class="quota-cell cell--medium"><span class="text is-small is-txtSoftGrey">1222 </span></div>
    <div class="quota-cell cell--medium cell--mobile"><span class="text is-small is-txtSoftGrey">12 </span></div>
    <div class="quota-cell cell--medium"><span class="text is-small is-txtSoftGrey">1234 </span></div>
    <div class="quota-help cell--small"><a href=""><img svg-inline="" src="../../../assets/icons/common/question-mark.svg" class="quota-image"></a></div>
  </div>
</div>
`;

exports[`QuotaWidget.vue should render problem bar if used ammount is over 90% 1`] = `
<div class="quota-widget" quotatype="test">
  <div class="quota-main">
    <div class="quota-cell cell--title">
      <h4 class="text is-caption is-semibold is-txtGrey">My test</h4>
    </div>
    <div class="quota-cell cell--large">
      <div class="progressbar">
        <div class="progressbar progressbar--problem" style="width: 93.2%;"></div>
      </div>
    </div>
  </div>
  <div class="quota-data">
    <div class="quota-cell cell--medium"><span class="text is-small is-txtSoftGrey">68 </span></div>
    <div class="quota-cell cell--medium cell--mobile"><span class="text is-small is-txtSoftGrey">932 </span></div>
    <div class="quota-cell cell--medium"><span class="text is-small is-txtSoftGrey">1000 </span></div>
    <div class="quota-help cell--small"><a href=""><img svg-inline="" src="../../../assets/icons/common/question-mark.svg" class="quota-image"></a></div>
  </div>
</div>
`;

exports[`QuotaWidget.vue should render warning bar if used ammount is over 60% and under 90% 1`] = `
<div class="quota-widget" quotatype="test">
  <div class="quota-main">
    <div class="quota-cell cell--title">
      <h4 class="text is-caption is-semibold is-txtGrey">My test</h4>
    </div>
    <div class="quota-cell cell--large">
      <div class="progressbar">
        <div class="progressbar progressbar--warning" style="width: 61%;"></div>
      </div>
    </div>
  </div>
  <div class="quota-data">
    <div class="quota-cell cell--medium"><span class="text is-small is-txtSoftGrey">390 </span></div>
    <div class="quota-cell cell--medium cell--mobile"><span class="text is-small is-txtSoftGrey">610 </span></div>
    <div class="quota-cell cell--medium"><span class="text is-small is-txtSoftGrey">1000 </span></div>
    <div class="quota-help cell--small"><a href=""><img svg-inline="" src="../../../assets/icons/common/question-mark.svg" class="quota-image"></a></div>
  </div>
</div>
`;
